--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,10 @@
 <% include partials/header %>
 
-<h1>Homepage</h1>
+<h1>Movie Search</h1>
+
+<form action="results" method="GET">
+	<input type="text" placeholder="search term" name="search">
+	<input type="submit" name="">
+</form>
 
 <% include partials/footer %>
